--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Olic</string>
     <string name="title_home">강의실검색</string>
     <string name="title_dashboard">즐겨찾기</string>
-    <string name="title_notifications">메뉴</string>
+    <string name="title_timetable">시간표</string>
+    <string name="semester">20191</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
