--- a/OlicMain/app/src/main/res/values/strings.xml
+++ b/OlicMain/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_home">강의실검색</string>
     <string name="title_dashboard">즐겨찾기</string>
     <string name="title_building">건물검색</string>
+    <string name="title_lecture">수강현황</string>
     <string name="semester">20192</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
